Improve thread-safety of QueryUncaughtExceptionHandler
Make the following changes to improve the thread-safety of
QueryUncaughtExceptionHandler, and add test coverage.
- Generate a sequence for each call to uncaughtException() to help
  ensure the first call with a non-null Throwable wins the race,
  regardless of which thread's CAS operation completes first.
- In uncaughtException(), atomically update the sequence number, thread,
  and throwable at the same time.
- Use an efficient, thread-safe collection for storing and retrieving
  messages.